# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md  glad.c  shader.cpp  shader.h  utils.cpp  utils.h
hellotriangle/: CMakeLists.txt  hellotriangles.cpp
shaders/: CMakeLists.txt  fragment.glsl  shaders.cpp  vertex.glsl
textures/: CMakeLists.txt  fragment.glsl  textures.cpp  vertex.glsl
